<resources>
    <string name="app_name">ClassManager</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_fragment_manager">Roll</string>
    <string name="title_fragment_event">Events</string>
    <string name="copyright">Copyright © 2016&#8211;2017 SCUT. All Rights Reserved.</string>
    <string name="help">Please contact with H.D. Lin</string>
    <string name="undefined">Undefined</string>
    <string name="info_offline">需要联网才能运行哦/(ㄒoㄒ)/~~</string>
    <string name="info_connecting_err">登陆服务器失败/(ㄒoㄒ)/~~</string>
    <string name="info_download_success">数据库同步成功/(^_^)/</string>

    <string name="forced_update_toast">版本差异过大，正在获取更新</string>
    <string name="update_dialog_title">我有新版本咯！</string>
    <string name="update_start_hint">开始更新，正在召唤服务器爸爸！</string>
    <string name="update_yes">欣喜地接受</string>
    <string name="update_no">残忍地拒绝</string>

    <string name="new_event">新建活动</string>
    <string name="new_event_name_title">名称</string>
    <string name="new_event_place_title">地点</string>
    <string name="new_event_date_title">日期</string>
    <string name="new_event_time_title">开始时间</string>
    <string name="new_event_content_title">内容</string>
    <string name="new_event_participation_title">参与分</string>

    <string name="button_confirm">确认</string>
    <string name="button_cancel">取消</string>
</resources>
